load("//mojo:build_settings.bzl", "repeatable_string_flag")

repeatable_string_flag(
    name = "mojo_copt",
    build_setting_default = [],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "gpu_toolchain_type",
    visibility = ["//visibility:public"],
)
